# clang-inspect

./: CMakeLists.txt  ClangInspect.cpp  Makefile  README.md  USRFinder.cpp  USRFindingAction.cpp  USRFindingAction.h  Util.cpp  Util.h
clang-begin/: BeginMatchCallback.cpp  BeginMatchCallback.h  CMakeLists.txt  ClangBegin.cpp  IncludeFinder.cpp  IncludeFinder.h  Makefile  README.md  UseBeginAction.cpp  UseBeginAction.h  UseBeginActionFactory.h  UseBeginMatcher.cpp  UseBeginMatcher.h
clang-inspect/: CMakeLists.txt  README.md  USRFinder.cpp  USRFinder.h  USRFindingAction.cpp  Util.cpp
clang-inspect/tool/: CMakeLists.txt  ClangInspect.cpp  Makefile
example/: CMakeLists.txt  Example.cpp  Makefile
unittests/: CMakeLists.txt  Makefile
unittests/clang-inspect/: CMakeLists.txt  Makefile  USRFindingTest.cpp  UtilTest.cpp
